--- a/photolayoutseditor/CMakeLists.txt
+++ b/photolayoutseditor/CMakeLists.txt
@@ -154,7 +154,7 @@ INCLUDE_DIRECTORIES(${QT_INCLUDE}
 
 KDE4_ADD_KCFG_FILES( PhotoLayoutsEditor_SRCS GENERATE_MOC ./settings/PLEConfigSkeleton.kcfgc )
 
-# Adjust flag for static lib and 64 bits computers using -fPIC for GCC compiler (B.K.O: #269903)
+# Adjust flag for static lib and 64 bits computers using -fPIC for GCC compiler (bug: #269903)
 FOREACH( _currentfile ${PhotoLayoutsEditor_SRCS} )
     IF(NOT MSVC)
         SET_SOURCE_FILES_PROPERTIES( ${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC" )
