--- a/htmlexport/themes/floating_cards/floating_cards.desktop
+++ b/htmlexport/themes/floating_cards/floating_cards.desktop
@@ -161,25 +161,37 @@ Url=preview.png
 Allow non-square thumbnails=true
 
 [X-HTMLExport Parameter keyboard_navigation]
+Name=Keyboard navigation
+Name[de]=Tastaturnavigation
 Type=list
 Default=1
 Value_0=1
-Caption_0[en_GB]=on
-Caption_0[en_US]=on
-Caption_0[cz]=zapnuto
+Caption_0=On
+Caption_0[en_GB]=On
+Caption_0[en_US]=On
+Caption_0[cz]=Zapnuto
+Caption_0[de]=Ein
 Value_1=0
-Caption_1[en_GB]=off
-Caption_1[en_US]=off
-Caption_1[cz]=vypnuto
+Caption_1=Off
+Caption_1[en_GB]=Off
+Caption_1[en_US]=Off
+Caption_1[cz]=Vypnuto
+Caption_1[de]=Aus
 
 [X-HTMLExport Parameter preload]
+Name=Preload
+Name[de]=Vorausladen
 Type=list
 Default=1
 Value_0=1
-Caption_0[en_GB]=yes
-Caption_0[en_US]=yes
-Caption_0[cz]=ano
+Caption_0=Yes
+Caption_0[en_GB]=Yes
+Caption_0[en_US]=Yes
+Caption_0[cz]=Ano
+Caption_0[de]=Ja
 Value_1=0
-Caption_1[en_GB]=no
-Caption_1[en_US]=no
-Caption_1[cz]=ne
+Caption_1=No
+Caption_1[en_GB]=No
+Caption_1[en_US]=No
+Caption_1[cz]=Ne
+Caption_1[de]=Nein
