do not use argument to close cmake IF/ENDIF

--- a/acquireimages/CMakeLists.txt
+++ b/acquireimages/CMakeLists.txt
@@ -12,7 +12,7 @@ SET(acquireimages_common_SRCS
 FOREACH(_currentfile ${acquireimages_common_SRCS})
    IF(NOT MSVC)
        SET_SOURCE_FILES_PROPERTIES(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
-   ENDIF(NOT MSVC)
+   ENDIF()
 ENDFOREACH(_currentfile ${acquireimages_common_SRCS})
 
 KDE4_ADD_LIBRARY(libacquireimages STATIC ${acquireimages_common_SRCS})
