--- a/dlnaexport/extra/hupnp/CMakeLists.txt
+++ b/dlnaexport/extra/hupnp/CMakeLists.txt
@@ -146,7 +146,7 @@ SET(SRCS ${HUpnp_SRCS} ${HUpnp_MOC_SRCS})
 FOREACH(_currentfile ${SRCS})
     IF(NOT MSVC)
         SET_SOURCE_FILES_PROPERTIES(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
-    ENDIF(NOT MSVC)
+    ENDIF()
 ENDFOREACH(_currentfile ${SRCS})
 
 ADD_LIBRARY(HUpnp STATIC ${SRCS})
@@ -155,6 +155,6 @@ TARGET_LINK_LIBRARIES(HUpnp QtSoap ${QT_LIBRARIES})
 
 IF(NOT MSVC)
     SET_TARGET_PROPERTIES(HUpnp PROPERTIES COMPILE_FLAGS "-fPIC")
-ENDIF(NOT MSVC)
+ENDIF()
 
 #INSTALL(TARGETS HUpnp ARCHIVE DESTINATION lib ${INSTALL_TARGETS_DEFAULT_ARGS})
