--- a/dlnaexport/extra/hupnp_av/CMakeLists.txt
+++ b/dlnaexport/extra/hupnp_av/CMakeLists.txt
@@ -251,7 +251,7 @@ SET(SRCS ${HUpnpAv_SRCS} ${HUpnpAv_MOC_SRCS})
 FOREACH(_currentfile ${SRCS})
     IF(NOT MSVC)
         SET_SOURCE_FILES_PROPERTIES(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
-    ENDIF(NOT MSVC)
+    ENDIF()
 ENDFOREACH(_currentfile ${SRCS})
 
 ADD_LIBRARY(HUpnpAv STATIC ${SRCS})
@@ -260,6 +260,6 @@ TARGET_LINK_LIBRARIES(HUpnpAv HUpnp ${QT_LIBRARIES})
 
 IF(NOT MSVC)
     SET_TARGET_PROPERTIES(HUpnpAv PROPERTIES COMPILE_FLAGS "-fPIC")
-ENDIF(NOT MSVC)
+ENDIF()
 
 #INSTALL(TARGETS HUpnpAv ARCHIVE DESTINATION lib ${INSTALL_TARGETS_DEFAULT_ARGS})
