--- a/dlnaexport/extra/qtsoap/CMakeLists.txt
+++ b/dlnaexport/extra/qtsoap/CMakeLists.txt
@@ -14,14 +14,14 @@ SET(SRCS ${QtSoap_MOC_SRCS} ${QtSoap_SRCS})
 FOREACH(_currentfile ${SRCS})
     IF(NOT MSVC)
         SET_SOURCE_FILES_PROPERTIES(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
-    ENDIF(NOT MSVC)
+    ENDIF()
 ENDFOREACH(_currentfile ${SRCS})
 
 ADD_LIBRARY(QtSoap STATIC ${SRCS})
 
 IF(NOT MSVC)
     SET_TARGET_PROPERTIES(QtSoap PROPERTIES COMPILE_FLAGS "-fPIC")
-ENDIF(NOT MSVC)
+ENDIF()
 
 TARGET_LINK_LIBRARIES(QtSoap ${QT_LIBRARIES})
 
