--- a/photolayoutseditor/extra/qtpropertybrowser/CMakeLists.txt
+++ b/photolayoutseditor/extra/qtpropertybrowser/CMakeLists.txt
@@ -103,14 +103,14 @@ SET(SRCS ${extension_MOC}
 FOREACH(_currentfile ${SRCS})
     IF(NOT MSVC)
         SET_SOURCE_FILES_PROPERTIES(${_currentfile} PROPERTIES COMPILE_FLAGS "-fPIC")
-    ENDIF(NOT MSVC)
+    ENDIF()
 ENDFOREACH(_currentfile ${SRCS})
 
 ADD_LIBRARY(PropertyBrowser STATIC ${SRCS})
 
 IF(NOT MSVC)
     SET_TARGET_PROPERTIES(PropertyBrowser PROPERTIES COMPILE_FLAGS "-fPIC")
-ENDIF(NOT MSVC)
+ENDIF()
 
 TARGET_LINK_LIBRARIES(PropertyBrowser ${QT_LIBRARIES})
 
