--- a/dlnaexport/extra/CMakeLists.txt
+++ b/dlnaexport/extra/CMakeLists.txt
@@ -6,6 +6,6 @@ ADD_SUBDIRECTORY(qtsoap)
 ADD_SUBDIRECTORY(hupnp)
 ADD_SUBDIRECTORY(hupnp_av)
 
-if(KDE4_BUILD_TESTS)
+IF(KDE4_BUILD_TESTS)
     ADD_SUBDIRECTORY(avtest)
-ENDIF(KDE4_BUILD_TESTS)
+ENDIF()
